[EDIT] code for change detection

--- a/change_detections.ipynb
+++ b/change_detections.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -10,7 +10,7 @@
       "text/html": [
        "<p>To authorize access needed by Earth Engine, open the following\n",
        "        URL in a web browser and follow the instructions:</p>\n",
-       "        <p><a href=https://code.earthengine.google.com/client-auth?scopes=https%3A//www.googleapis.com/auth/earthengine%20https%3A//www.googleapis.com/auth/devstorage.full_control&request_id=PVOT4YfHzRuq2iySkjdSviJpcfhmUqNdXZDETHjULv4&tc=Ia9n8R50QsdYzRP7NwD2pVg7TpSSNSsT9egLp_VfE6E&cc=9luMb_KWtT5xN5mn22ONwiJO3N4eq2OFcna_A-7CP2c>https://code.earthengine.google.com/client-auth?scopes=https%3A//www.googleapis.com/auth/earthengine%20https%3A//www.googleapis.com/auth/devstorage.full_control&request_id=PVOT4YfHzRuq2iySkjdSviJpcfhmUqNdXZDETHjULv4&tc=Ia9n8R50QsdYzRP7NwD2pVg7TpSSNSsT9egLp_VfE6E&cc=9luMb_KWtT5xN5mn22ONwiJO3N4eq2OFcna_A-7CP2c</a></p>\n",
+       "        <p><a href=https://code.earthengine.google.com/client-auth?scopes=https%3A//www.googleapis.com/auth/earthengine%20https%3A//www.googleapis.com/auth/devstorage.full_control&request_id=IVayAX6XeX5WyJQsDxJsGY056Mg93d_P33diuP-1Guk&tc=s25jPyRObyi6rxr781BU4qH_yCpIWTDx7PFbtuCFaJs&cc=GS0he7jGxDoGP8iD7LbclwFP9_5dt9jLS75czqaV4tw>https://code.earthengine.google.com/client-auth?scopes=https%3A//www.googleapis.com/auth/earthengine%20https%3A//www.googleapis.com/auth/devstorage.full_control&request_id=IVayAX6XeX5WyJQsDxJsGY056Mg93d_P33diuP-1Guk&tc=s25jPyRObyi6rxr781BU4qH_yCpIWTDx7PFbtuCFaJs&cc=GS0he7jGxDoGP8iD7LbclwFP9_5dt9jLS75czqaV4tw</a></p>\n",
        "        <p>The authorization workflow will generate a code, which you should paste in the box below.</p>\n",
        "        "
       ],
@@ -86,7 +86,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "coords = geoJSON['features'][0]['geometry']['coordinates']\n",
+    "coords = geoJSON 'features'][0]['geometry']['coordinates']\n",
     "aoi = ee.Geometry.Polygon(coords)"
    ]
   },
@@ -96,20 +96,54 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "27.129564922715716,54.55896956167419,\n",
-    "27.14295451011806,54.55896956167419,\n",
-    "27.14295451011806,54.566932014707845,\n",
-    "27.129564922715716,54.566932014707845,\n",
-    "27.129564922715716,54.55896956167419\n",
+    "#поле\n",
+    "28.327897562397894,55.039428955902046,\n",
+    "28.330060162226996,55.038648634224636,\n",
+    "28.330800456547973,55.03798868780123,\n",
+    "28.33114380399439,55.03814025695209,\n",
+    "28.330813815502186,55.038563883624256,\n",
+    "28.33395752670043,55.04182797430781,\n",
+    "28.330871760040484,55.04259937649256,\n",
+    "28.327897562397894,55.039428955902046\n",
     "\n",
     "\n",
     "\n",
-    "\n",
-    "26.992805034442117,54.60416673414815,\n",
-    "27.011086971087625,54.60416673414815,\n",
-    "27.011086971087625,54.61714028506184,\n",
-    "26.992805034442117,54.61714028506184,\n",
-    "26.992805034442117,54.60416673414815"
+    "#лес\n",
+    "28.36867608564167,55.022582459441814,\n",
+    "28.36874294658985,55.02206521058777,\n",
+    "28.37454865454415,55.022595858779546,\n",
+    "28.374267725132615,55.02293029316314,\n",
+    "28.373870879521395,55.0232602426756,\n",
+    "28.373870974775777,55.02355012908304,\n",
+    "28.373719364548023,55.02405400731252,\n",
+    "28.373902022182207,55.024437455463755,\n",
+    "28.374892055329326,55.02461580420657,\n",
+    "28.374562011980984,55.02507958796338,\n",
+    "28.374419281096788,55.02528022215966,\n",
+    "28.375007949154853,55.02546751596582,\n",
+    "28.37703238535213,55.025886691095124,\n",
+    "28.376885185039708,55.02594464914051,\n",
+    "28.37664442489605,55.0261988339464,\n",
+    "28.37680052237374,55.02664921978632,\n",
+    "28.37665341404765,55.02686764479318,\n",
+    "28.376006759168504,55.02698810213807,\n",
+    "28.37531566170606,55.02697472927314,\n",
+    "28.37506145211032,55.02669827258685,\n",
+    "28.374575496790893,55.02688998306344,\n",
+    "28.374178574655723,55.02687214245029,\n",
+    "28.37390654361895,55.026372757851,\n",
+    "28.37359895534249,55.026216652429945,\n",
+    "28.373665700642125,55.02593572399014,\n",
+    "28.373233325777882,55.025708315786225,\n",
+    "28.372617852409682,55.02558790304464,\n",
+    "28.372577745453444,55.02528920026555,\n",
+    "28.372805243675966,55.02497702445131,\n",
+    "28.37239052438747,55.02469164662594,\n",
+    "28.37136041079541,55.02518662221359,\n",
+    "28.37086545748986,55.024861136968426,\n",
+    "28.36998250357148,55.02419220135768,\n",
+    "28.369108621469234,55.02339401848582,\n",
+    "28.36867608564167,55.0"
    ]
   },
   {
@@ -124,14 +158,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7\n"
+      "19\n"
      ]
     }
    ],
@@ -139,13 +173,13 @@
     "import pandas as pd\n",
     "from dateutil.relativedelta import relativedelta\n",
     "# Any region of the world\n",
-    "polygon = ee.Geometry.Polygon([26.992805034442117,54.60416673414815,\n",
-    "27.011086971087625,54.60416673414815,\n",
-    "27.011086971087625,54.61714028506184,\n",
-    "26.992805034442117,54.61714028506184,\n",
-    "26.992805034442117,54.60416673414815\n",
+    "polygon = ee.Geometry.Polygon([27.129564922715716,54.55896956167419,\n",
+    "27.14295451011806,54.55896956167419,\n",
+    "27.14295451011806,54.566932014707845,\n",
+    "27.129564922715716,54.566932014707845,\n",
+    "27.129564922715716,54.55896956167419\n",
     "])\n",
-    "startDate = '2022-04-01'\n",
+    "startDate = '2021-04-01'\n",
     "endDate = '2022-11-30'\n",
     "\n",
     "modisNDVI = ee.ImageCollection('MODIS/MOD09GA_006_NDVI').select('NDVI').filterDate(startDate, endDate)\n",
@@ -185,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -216,55 +250,127 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2022-04</td>\n",
-       "      <td>0.260003</td>\n",
+       "      <td>2021-04</td>\n",
+       "      <td>0.174130</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2022-05</td>\n",
-       "      <td>0.295145</td>\n",
+       "      <td>2021-05</td>\n",
+       "      <td>0.205487</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2022-06</td>\n",
-       "      <td>0.480019</td>\n",
+       "      <td>2021-06</td>\n",
+       "      <td>0.518721</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2022-07</td>\n",
-       "      <td>0.343241</td>\n",
+       "      <td>2021-07</td>\n",
+       "      <td>0.520979</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>2022-08</td>\n",
-       "      <td>0.558420</td>\n",
+       "      <td>2021-08</td>\n",
+       "      <td>0.207294</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>2022-09</td>\n",
-       "      <td>0.245553</td>\n",
+       "      <td>2021-09</td>\n",
+       "      <td>0.235497</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
+       "      <td>2021-10</td>\n",
+       "      <td>0.301212</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2021-11</td>\n",
+       "      <td>0.129781</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2021-12</td>\n",
+       "      <td>0.006767</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>2022-01</td>\n",
+       "      <td>0.048377</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>2022-02</td>\n",
+       "      <td>0.030266</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>2022-03</td>\n",
+       "      <td>0.254268</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>2022-04</td>\n",
+       "      <td>0.149911</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>2022-05</td>\n",
+       "      <td>0.310027</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>2022-06</td>\n",
+       "      <td>0.551292</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>2022-07</td>\n",
+       "      <td>0.359778</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>2022-08</td>\n",
+       "      <td>0.446199</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>2022-09</td>\n",
+       "      <td>0.203686</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
        "      <td>2022-10</td>\n",
-       "      <td>0.164912</td>\n",
+       "      <td>0.159789</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      Date      NDVI\n",
-       "0  2022-04  0.260003\n",
-       "1  2022-05  0.295145\n",
-       "2  2022-06  0.480019\n",
-       "3  2022-07  0.343241\n",
-       "4  2022-08  0.558420\n",
-       "5  2022-09  0.245553\n",
-       "6  2022-10  0.164912"
+       "       Date      NDVI\n",
+       "0   2021-04  0.174130\n",
+       "1   2021-05  0.205487\n",
+       "2   2021-06  0.518721\n",
+       "3   2021-07  0.520979\n",
+       "4   2021-08  0.207294\n",
+       "5   2021-09  0.235497\n",
+       "6   2021-10  0.301212\n",
+       "7   2021-11  0.129781\n",
+       "8   2021-12  0.006767\n",
+       "9   2022-01  0.048377\n",
+       "10  2022-02  0.030266\n",
+       "11  2022-03  0.254268\n",
+       "12  2022-04  0.149911\n",
+       "13  2022-05  0.310027\n",
+       "14  2022-06  0.551292\n",
+       "15  2022-07  0.359778\n",
+       "16  2022-08  0.446199\n",
+       "17  2022-09  0.203686\n",
+       "18  2022-10  0.159789"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,23 +381,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Changes not detected\n"
+      "Changes detected\n"
      ]
     }
    ],
    "source": [
     "dataframe['Date'] = pd.to_datetime(dataframe['Date'])\n",
     "\n",
-    "dataframe = dataframe[(dataframe['Date'].dt.month >= 3) & (dataframe['Date'].dt.month <= 6) | (dataframe['Date'].dt.month >= 9) & (dataframe['Date'].dt.month <= 11)]\n",
+    "dataframe = dataframe[(dataframe['Date'].dt.month >= 4) & (dataframe['Date'].dt.month <= 6) | (dataframe['Date'].dt.month >= 9) & (dataframe['Date'].dt.month <= 11)]\n",
     "\n",
-    "march_to_may = (dataframe['Date'].dt.month >= 3) & (dataframe['Date'].dt.month <= 5)\n",
+    "march_to_may = (dataframe['Date'].dt.month >= 3) & (dataframe['Date'].dt.month <= 6)\n",
     "sept_to_nov = (dataframe['Date'].dt.month >= 9) & (dataframe['Date'].dt.month <= 11)\n",
     "\n",
     "if (dataframe[march_to_may]['NDVI'].min() < 0.16) & (dataframe[sept_to_nov]['NDVI'].min() < 0.16):\n",
