[EDIT] change sattelite and logic for detecting changes

--- a/change_detections.ipynb
+++ b/change_detections.ipynb
@@ -10,7 +10,7 @@
       "text/html": [
        "<p>To authorize access needed by Earth Engine, open the following\n",
        "        URL in a web browser and follow the instructions:</p>\n",
-       "        <p><a href=https://code.earthengine.google.com/client-auth?scopes=https%3A//www.googleapis.com/auth/earthengine%20https%3A//www.googleapis.com/auth/devstorage.full_control&request_id=IVayAX6XeX5WyJQsDxJsGY056Mg93d_P33diuP-1Guk&tc=s25jPyRObyi6rxr781BU4qH_yCpIWTDx7PFbtuCFaJs&cc=GS0he7jGxDoGP8iD7LbclwFP9_5dt9jLS75czqaV4tw>https://code.earthengine.google.com/client-auth?scopes=https%3A//www.googleapis.com/auth/earthengine%20https%3A//www.googleapis.com/auth/devstorage.full_control&request_id=IVayAX6XeX5WyJQsDxJsGY056Mg93d_P33diuP-1Guk&tc=s25jPyRObyi6rxr781BU4qH_yCpIWTDx7PFbtuCFaJs&cc=GS0he7jGxDoGP8iD7LbclwFP9_5dt9jLS75czqaV4tw</a></p>\n",
+       "        <p><a href=https://code.earthengine.google.com/client-auth?scopes=https%3A//www.googleapis.com/auth/earthengine%20https%3A//www.googleapis.com/auth/devstorage.full_control&request_id=e-oJqTymtYkhDsID_WwrZ9LNS-3K3mp1xYfa8_hMTBA&tc=bTsOJDz4R7cFvdkq88xczyyWhbgzWQ-s7KttRhC_6y4&cc=O-ukPiD15bKvyIU7B0hz634xCXfL7ERbiO_8pBWVsAw>https://code.earthengine.google.com/client-auth?scopes=https%3A//www.googleapis.com/auth/earthengine%20https%3A//www.googleapis.com/auth/devstorage.full_control&request_id=e-oJqTymtYkhDsID_WwrZ9LNS-3K3mp1xYfa8_hMTBA&tc=bTsOJDz4R7cFvdkq88xczyyWhbgzWQ-s7KttRhC_6y4&cc=O-ukPiD15bKvyIU7B0hz634xCXfL7ERbiO_8pBWVsAw</a></p>\n",
        "        <p>The authorization workflow will generate a code, which you should paste in the box below.</p>\n",
        "        "
       ],
@@ -25,6 +25,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Enter verification code: 4/1AWtgzh7AU-a1Sk6d6El7_a-0wYxk8VwKLKololbhBAz3VwFZrtgxhKj8COY\n",
       "\n",
       "Successfully saved authorization token.\n"
      ]
@@ -34,6 +35,16 @@
     "import ee\n",
     "ee.Authenticate()\n",
     "ee.Initialize()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "from statsmodels.tsa.stattools import adfuller"
    ]
   },
   {
@@ -86,7 +97,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "coords = geoJSON 'features'][0]['geometry']['coordinates']\n",
+    "coords = geoJSON ['features'][0]['geometry']['coordinates']\n",
     "aoi = ee.Geometry.Polygon(coords)"
    ]
   },
@@ -146,263 +157,168 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "coords = geoJSON['features'][0]['geometry']['coordinates']\n",
-    "aoi = ee.Geometry.Polygon(coords)"
+    "def maskS2clouds(image):\n",
+    "    qa = image.select('QA60')\n",
+    "    cloudBitMask = 1 << 10\n",
+    "    cirrusBitMask = 1 << 11\n",
+    "    mask = qa.bitwiseAnd(cloudBitMask).eq(0) \\\n",
+    "      .And(qa.bitwiseAnd(cirrusBitMask).eq(0))    \n",
+    "    return image.updateMask(mask)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "19\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "from dateutil.relativedelta import relativedelta\n",
-    "# Any region of the world\n",
-    "polygon = ee.Geometry.Polygon([27.129564922715716,54.55896956167419,\n",
-    "27.14295451011806,54.55896956167419,\n",
-    "27.14295451011806,54.566932014707845,\n",
-    "27.129564922715716,54.566932014707845,\n",
-    "27.129564922715716,54.55896956167419\n",
-    "])\n",
-    "startDate = '2021-04-01'\n",
-    "endDate = '2022-11-30'\n",
-    "\n",
-    "modisNDVI = ee.ImageCollection('MODIS/MOD09GA_006_NDVI').select('NDVI').filterDate(startDate, endDate)\n",
-    "# Select the bands for NDVI calculation\n",
-    "\n",
-    "\n",
-    "start_date = pd.to_datetime(startDate)\n",
-    "end_date = pd.to_datetime(endDate)\n",
-    "\n",
-    "# Calculate the number of months between the two dates\n",
-    "num_months = relativedelta(end_date, start_date).months + (relativedelta(end_date, start_date).years * 12)\n",
-    "\n",
-    "print(num_months)\n",
-    "    \n",
-    "def custom_fun(n):\n",
+    "sent2NDVI= ee.ImageCollection(\"COPERNICUS/S2_SR\") \\\n",
+    "            .map(maskS2clouds)\\\n",
+    "            .map(lambda im: im.normalizedDifference(['B8','B4']).rename('NDVI').set('system:time_start', im.get('system:time_start')))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "startDate = ee.Date('2022-03-01')\n",
+    "endDate = ee.Date('2022-11-30')\n",
+    "num_months = endDate.difference(startDate, 'month').int()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#лес\n",
+    "polygon_fo = ee.Geometry.Polygon([ 28.36867608564167,55.022582459441814, 28.36874294658985,55.02206521058777, 28.37454865454415,55.022595858779546, 28.374267725132615,55.02293029316314, 28.373870879521395,55.0232602426756, 28.373870974775777,55.02355012908304, 28.373719364548023,55.02405400731252, 28.373902022182207,55.024437455463755, 28.374892055329326,55.02461580420657, 28.374562011980984,55.02507958796338, 28.374419281096788,55.02528022215966, 28.375007949154853,55.02546751596582, 28.37703238535213,55.025886691095124, 28.376885185039708,55.02594464914051, 28.37664442489605,55.0261988339464, 28.37680052237374,55.02664921978632, 28.37665341404765,55.02686764479318, 28.376006759168504,55.02698810213807, 28.37531566170606,55.02697472927314, 28.37506145211032,55.02669827258685, 28.374575496790893,55.02688998306344, 28.374178574655723,55.02687214245029, 28.37390654361895,55.026372757851, 28.37359895534249,55.026216652429945, 28.373665700642125,55.02593572399014, 28.373233325777882,55.025708315786225, 28.372617852409682,55.02558790304464, 28.372577745453444,55.02528920026555, 28.372805243675966,55.02497702445131, 28.37239052438747,55.02469164662594, 28.37136041079541,55.02518662221359, 28.37086545748986,55.024861136968426, 28.36998250357148,55.02419220135768, 28.369108621469234,55.02339401848582, 28.36867608564167,55.0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#поле\n",
+    "polygon_fi = ee.Geometry.Polygon([28.327897562397894,55.039428955902046, 28.330060162226996,55.038648634224636, 28.330800456547973,55.03798868780123, 28.33114380399439,55.03814025695209, 28.330813815502186,55.038563883624256, 28.33395752670043,55.04182797430781, 28.330871760040484,55.04259937649256, 28.327897562397894,55.039428955902046])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def custom_fun(n, polygon):\n",
     "    date = ee.Date(startDate).advance(n,'month')\n",
     "    m = date.get(\"month\")\n",
     "    y = date.get(\"year\")\n",
     "    dic = ee.Dictionary({\n",
     "        'Date':date.format('yyyy-MM')\n",
-    "    })\n",
-    "    \n",
-    "    tempNDVI = (modisNDVI.filter(ee.Filter.calendarRange(y, y, 'year'))\n",
-    "                .filter(ee.Filter.calendarRange(m, m, 'month'))\n",
+    "    })    \n",
+    "    tempNDVI = (sent2NDVI\n",
+    "                .filterBounds(polygon)  \n",
+    "                .filter(ee.Filter.calendarRange(y, y, 'year'))\n",
+    "                .filter(ee.Filter.calendarRange(m, m, 'month'))                \n",
     "                .mean()\n",
     "                .reduceRegion(\n",
     "                    reducer = ee.Reducer.mean(),\n",
     "                    geometry = polygon,\n",
-    "                    scale = 250))\n",
-    "\n",
-    "    return dic.combine(tempNDVI)\n",
-    "\n",
-    "modis_YrMo = ee.List.sequence(0, num_months).map(custom_fun)\n",
-    "\n",
-    "dataframe = pd.DataFrame(modis_YrMo.getInfo())"
+    "                    scale = 20))\n",
+    "    return dic.combine(tempNDVI) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Date</th>\n",
-       "      <th>NDVI</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2021-04</td>\n",
-       "      <td>0.174130</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2021-05</td>\n",
-       "      <td>0.205487</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2021-06</td>\n",
-       "      <td>0.518721</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2021-07</td>\n",
-       "      <td>0.520979</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2021-08</td>\n",
-       "      <td>0.207294</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>2021-09</td>\n",
-       "      <td>0.235497</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>2021-10</td>\n",
-       "      <td>0.301212</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>2021-11</td>\n",
-       "      <td>0.129781</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>2021-12</td>\n",
-       "      <td>0.006767</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>2022-01</td>\n",
-       "      <td>0.048377</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>2022-02</td>\n",
-       "      <td>0.030266</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>2022-03</td>\n",
-       "      <td>0.254268</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>2022-04</td>\n",
-       "      <td>0.149911</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>2022-05</td>\n",
-       "      <td>0.310027</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>2022-06</td>\n",
-       "      <td>0.551292</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>2022-07</td>\n",
-       "      <td>0.359778</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>2022-08</td>\n",
-       "      <td>0.446199</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>2022-09</td>\n",
-       "      <td>0.203686</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>2022-10</td>\n",
-       "      <td>0.159789</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       Date      NDVI\n",
-       "0   2021-04  0.174130\n",
-       "1   2021-05  0.205487\n",
-       "2   2021-06  0.518721\n",
-       "3   2021-07  0.520979\n",
-       "4   2021-08  0.207294\n",
-       "5   2021-09  0.235497\n",
-       "6   2021-10  0.301212\n",
-       "7   2021-11  0.129781\n",
-       "8   2021-12  0.006767\n",
-       "9   2022-01  0.048377\n",
-       "10  2022-02  0.030266\n",
-       "11  2022-03  0.254268\n",
-       "12  2022-04  0.149911\n",
-       "13  2022-05  0.310027\n",
-       "14  2022-06  0.551292\n",
-       "15  2022-07  0.359778\n",
-       "16  2022-08  0.446199\n",
-       "17  2022-09  0.203686\n",
-       "18  2022-10  0.159789"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "dataframe.head(num_months)"
+    "polygon1_s2_YrMo = ee.List.sequence(0, num_months).map(lambda x: custom_fun(x, polygon_fo)).getInfo()\n",
+    "polygon2_s2_YrMo = ee.List.sequence(0, num_months).map(lambda x: custom_fun(x, polygon_fi)).getInfo()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataframe1 = pd.DataFrame(polygon1_s2_YrMo)\n",
+    "dataframe2 = pd.DataFrame(polygon2_s2_YrMo)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ndvi_values1=dataframe1[\"NDVI\"]\n",
+    "ndvi_values2=dataframe2[\"NDVI\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Changes detected\n"
+      "p-value: 0.000177\n",
+      "Нет значительных изменений в растительном покрове.\n"
      ]
     }
    ],
    "source": [
-    "dataframe['Date'] = pd.to_datetime(dataframe['Date'])\n",
-    "\n",
-    "dataframe = dataframe[(dataframe['Date'].dt.month >= 4) & (dataframe['Date'].dt.month <= 6) | (dataframe['Date'].dt.month >= 9) & (dataframe['Date'].dt.month <= 11)]\n",
-    "\n",
-    "march_to_may = (dataframe['Date'].dt.month >= 3) & (dataframe['Date'].dt.month <= 6)\n",
-    "sept_to_nov = (dataframe['Date'].dt.month >= 9) & (dataframe['Date'].dt.month <= 11)\n",
-    "\n",
-    "if (dataframe[march_to_may]['NDVI'].min() < 0.16) & (dataframe[sept_to_nov]['NDVI'].min() < 0.16):\n",
-    "    print(\"Changes detected\")\n",
-    "else:\n",
-    "    print(\"Changes not detected\")"
+    "result = adfuller(ndvi_values1)\n",
+    "print('p-value: %f' % result[1])\n",
+    "if result[1] >0.05:\n",
+    "    print(\"Есть значительные изменения в растительном покрове.\")\n",
+    "else : \n",
+    "    print(\"Нет значительных изменений в растительном покрове.\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "p-value: 0.472109\n",
+      "Есть значительные изменения в растительном покрове.\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = adfuller(ndvi_values2)\n",
+    "print('p-value: %f' % result[1])\n",
+    "if result[1] >0.05:\n",
+    "    print(\"Есть значительные изменения в растительном покрове.\")\n",
+    "else : \n",
+    "    print(\"Нет значительных изменений в растительном покрове.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -424,7 +340,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
